name: my-xmonad
version: 0.1.0
author: Alonzo-Coeus
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  main-is: xmonad.hs
  build-depends:       base
                     , containers
                     , xmonad
                     , xmonad-contrib
  default-language:    Haskell2010
